Fixed TileEntity initialization
Signed-off-by: Paul Hagedorn <panzer1119@gmail.com>

--- a/src/main/resources/assets/ccpsecurity/lang/de_DE.lang
+++ b/src/main/resources/assets/ccpsecurity/lang/de_DE.lang
@@ -1,2 +1,5 @@
 #Blocks
-tile.ccpsecurity:aes_crypto_block=AES Krypto Block
+tile.ccpsecurity:aes_crypto_block.name=AES Krypto Block
+
+#Items
+item.ccpsecurity:aes_crypto_block.name=AES Krypto Block
